--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "gulp": "^3.9.1",
     "gulp-rollup": "^2.5.1",
     "gulp-sourcemaps": "^2.2.0",
+    "rollup": "^0.36.3",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-stream": "^1.14.0",
     "vinyl-buffer": "^1.0.0",
@@ -92,12 +93,10 @@
     "xo": "^0.17.0"
   },
   "dependencies": {
-    "disconnect": "^1.0.1",
     "history": "^4.4.0",
     "photon": "connors/photon",
     "preact": "^6.4.0",
     "preact-photon": "^1.3.0",
-    "preact-router": "^2.3.0",
-    "rollup": "^0.36.3"
+    "preact-router": "^2.3.0"
   }
 }
