--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "songbee-desktop",
+  "productName": "Songbee Preview",
   "version": "0.1.0",
   "description": "A minimal Electron application",
   "main": "dist/main.js",
@@ -82,6 +83,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "electron": "^1.4.1",
+    "electron-packager": "^8.3.0",
     "eslint-config-xo-react": "^0.10.0",
     "eslint-plugin-react": "^6.6.0",
     "gulp": "^3.9.1",
