--- a/package.json
+++ b/package.json
@@ -100,9 +100,10 @@
     "babel-polyfill": "^6.16.0",
     "bencode": "^0.10.0",
     "blob-to-buffer": "^1.2.6",
+    "cuid": "^1.3.8",
     "decko": "^1.1.3",
     "history": "^4.4.0",
-    "listplayer": "^0.2.3",
+    "node-mpv": "^0.11.0",
     "photon": "connors/photon",
     "pify": "^2.3.0",
     "preact": "^6.4.0",
