--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "babel": {
     "presets": [
-      "es2015-rollup",
+      "es2015",
       "es2016",
       "es2017",
       "stage-0",
@@ -26,7 +26,8 @@
           "pragma": "h"
         }
       ],
-      "transform-decorators-legacy"
+      "transform-decorators-legacy",
+      "transform-es2015-modules-commonjs"
     ]
   },
   "xo": {
@@ -77,6 +78,7 @@
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-preset-es2015-rollup": "^1.2.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
@@ -87,11 +89,9 @@
     "eslint-config-xo-react": "^0.10.0",
     "eslint-plugin-react": "^6.6.0",
     "gulp": "^3.9.1",
-    "gulp-rollup": "^2.5.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-filter": "^4.0.0",
     "gulp-sourcemaps": "^2.2.0",
-    "rollup": "^0.36.3",
-    "rollup-plugin-babel": "^2.6.1",
-    "rollup-stream": "^1.14.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "xo": "^0.17.0"
