--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "devtron": "^1.4.0",
     "electron": "^1.4.1",
     "electron-packager": "^8.3.0",
     "eslint-config-xo-react": "^0.10.0",
@@ -103,6 +104,7 @@
     "cuid": "^1.3.8",
     "decko": "^1.1.3",
     "history": "^4.4.0",
+    "lodash.isequal": "^4.4.0",
     "node-mpv": "^0.11.0",
     "photon": "connors/photon",
     "pify": "^2.3.0",
