--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "electron .",
+    "inspect": "electron-inspector",
     "build": "gulp"
   },
   "repository": "https://github.com/Songbee/desktop",
@@ -27,7 +28,8 @@
         }
       ],
       "transform-decorators-legacy",
-      "transform-es2015-modules-commonjs"
+      "transform-es2015-modules-commonjs",
+      "transform-runtime"
     ]
   },
   "xo": {
@@ -79,6 +81,7 @@
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015-rollup": "^1.2.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
@@ -98,7 +101,7 @@
     "xo": "^0.17.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0",
+    "babel-runtime": "^6.18.0",
     "bencode": "^0.10.0",
     "blob-to-buffer": "^1.2.6",
     "cuid": "^1.3.8",
