--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "repository": "https://github.com/Songbee/desktop",
   "author": "The Songbee Team",
-  "license": "SEE LICENSE IN LICENSE.md",
   "babel": {
     "presets": [
       "es2015",
@@ -78,6 +77,7 @@
       }
     }
   },
+  "license": "GPL-3.0",
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
