--- a/package.json
+++ b/package.json
@@ -11,72 +11,6 @@
   },
   "repository": "https://github.com/Songbee/desktop",
   "author": "The Songbee Team",
-  "babel": {
-    "presets": [
-      "es2015",
-      "es2016",
-      "es2017",
-      "stage-0",
-      "react"
-    ],
-    "plugins": [
-      [
-        "transform-react-jsx",
-        {
-          "pragma": "h"
-        }
-      ],
-      "transform-decorators-legacy",
-      "transform-es2015-modules-commonjs",
-      "transform-runtime"
-    ]
-  },
-  "xo": {
-    "esnext": true,
-    "extends": "xo-react",
-    "envs": [
-      "browser",
-      "node"
-    ],
-    "space": 2,
-    "rules": {
-      "curly": [
-        2,
-        "multi"
-      ],
-      "quotes": [
-        1,
-        "double",
-        {
-          "avoidEscape": true,
-          "allowTemplateLiterals": true
-        }
-      ],
-      "react/jsx-space-before-closing": [
-        1,
-        "always"
-      ],
-      "react/no-unknown-property": [
-        2,
-        {
-          "ignore": [
-            "class"
-          ]
-        }
-      ],
-      "unicorn/filename-case": [
-        0
-      ],
-      "import/no-named-as-default": [
-        0
-      ]
-    },
-    "settings": {
-      "react": {
-        "pragma": "h"
-      }
-    }
-  },
   "license": "GPL-3.0",
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -91,14 +25,14 @@
     "electron": "^1.4.1",
     "electron-packager": "^8.3.0",
     "eslint-config-xo-react": "^0.10.0",
-    "eslint-plugin-react": "^6.6.0",
+    "eslint-config-xo-space": "^0.15.0",
+    "eslint-plugin-react": "^6.8.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-filter": "^4.0.0",
     "gulp-sourcemaps": "^2.2.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "xo": "^0.17.0"
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
