--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "blob-to-buffer": "^1.2.6",
     "cuid": "^1.3.8",
     "decko": "^1.1.3",
+    "env-paths": "^0.3.1",
     "history": "^4.4.0",
     "lodash.isequal": "^4.4.0",
     "node-mpv": "^0.11.0",
