--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-xo-react": "^0.10.0",
     "eslint-config-xo-space": "^0.15.0",
     "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-unicorn": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-filter": "^4.0.0",
