--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "productName": "Songbee Preview",
   "version": "0.1.0",
   "description": "A minimal Electron application",
-  "main": "dist/main.js",
+  "main": "src/main.js",
+  "epkg": {
+    "linux": {
+      "categories": [
+        "Audio",
+        "AudioVideo",
+        "Network",
+        "Player"
+      ]
+    }
+  },
   "scripts": {
-    "start": "electron .",
+    "start": "electron dist/songbee.asar",
     "inspect": "electron-inspector",
     "build": "gulp"
   },
@@ -29,6 +39,7 @@
     "eslint-plugin-react": "^6.8.0",
     "eslint-plugin-unicorn": "^1.0.0",
     "gulp": "^3.9.1",
+    "gulp-asar": "iamale/gulp-asar#generated-files",
     "gulp-babel": "^6.1.2",
     "gulp-filter": "^4.0.0",
     "gulp-sourcemaps": "^2.2.0",
