Disable ES2015 and 2016 transpiling
#np Rogue — Through the Dark

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "es2016", "es2017", "stage-0", "react"],
+  "presets": ["es2017", "stage-0", "react"],
   "plugins": [
     ["transform-react-jsx", { "pragma": "h" }],
     "transform-decorators-legacy",
