--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-xo-space": "^0.15.0",
     "eslint-plugin-react": "^6.8.0",
     "gulp": "^3.9.1",
+    "gulp-asar": "iamale/gulp-asar",
     "gulp-babel": "^6.1.2",
     "gulp-filter": "^4.0.0",
     "gulp-sourcemaps": "^2.2.0"
