--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "gulp-asar": "iamale/gulp-asar",
     "gulp-babel": "^6.1.2",
     "gulp-filter": "^4.0.0",
-    "gulp-sourcemaps": "^2.2.0"
+    "gulp-sourcemaps": "^2.2.0",
     "gulp-yarn": "^0.1.0",
   },
   "dependencies": {
