--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "productName": "Songbee Preview",
   "version": "0.1.0",
   "description": "A minimal Electron application",
-  "main": "dist/main.js",
+  "main": "./main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron dist/",
+    "start:prod": "electron build/songbee.asar",
     "inspect": "electron-inspector",
-    "build": "gulp"
+    "build": "gulp",
+    "build:prod": "gulp build:prod"
   },
   "repository": "https://github.com/Songbee/desktop",
   "author": "The Songbee Team",
@@ -32,6 +34,7 @@
     "gulp-filter": "^4.0.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-yarn": "^0.1.0",
+    "run-sequence": "^1.2.2"
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
