Switch to babel-plugin-async-to-promises
This removes dependency on babel-runtime, which further cuts down the
bundle size from 37M to 22M :)

related: #14

#nowplaying Dusty Kid - Moto Perpetuo

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
-  "presets": ["es2017", "stage-0", "react"],
+  "presets": ["react"],
   "plugins": [
+    "transform-object-rest-spread",
+    "async-to-promises",
     ["transform-react-jsx", { "pragma": "h" }],
     "transform-decorators-legacy",
-    "transform-es2015-modules-commonjs",
-    "transform-runtime"
+    "transform-es2015-modules-commonjs"
   ]
 }
