--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "The Songbee Team",
   "license": "GPL-3.0",
   "devDependencies": {
+    "babel-plugin-async-to-promises": "^1.0.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-react": "^6.16.0",
@@ -37,7 +39,6 @@
     "run-sequence": "^1.2.2"
   },
   "dependencies": {
-    "babel-runtime": "^6.18.0",
     "bencode": "^0.10.0",
     "blob-to-buffer": "^1.2.6",
     "cuid": "^1.3.8",
